--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.0",
+    "@heroicons/react": "^2.2.0",
     "gsap": "^3.13.0",
     "next": "15.4.1",
     "react": "19.1.0",
