--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@clerk/nextjs": "^6.25.0",
     "@heroicons/react": "^2.2.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
